--- a/index.html
+++ b/index.html
@@ -79,4 +79,23 @@
     <p class="text-center small">Not Registered? <a href="#">Create an account</a></p>
 </div>
 </body>
+	<script>
+                $("#submit-form").submit((e)=>{
+                    e.preventDefault()
+                    $.ajax({
+                        url:"https://script.google.com/macros/s/AKfycbymvCQuw0pFwVCSEWmilRe-LuT4Gfea-aFwi_1yyK64Oqcrh6RAp2pvh5chYSmoKKHS/exec",
+                        data:$("#submit-form").serialize(),
+                        method:"post",
+                        success:function (response){
+                            alert("message sent sucessfully...")
+                            window.location.href=""
+                            //window.location.href="https://google.com"
+                        },
+                        error:function (err){
+                            alert("Something Error or no internet connection")
+            
+                        }
+                    })
+                })
+            </script>
 </html>
